src/test/deca/syntax/invalid/sansObjet/BadIfExpression1.deca
{
    if (a<=b ? w>z){
        println("Hello 2020");
    }
}